# kata

./: .gitignore
bowlingscorer/: README.md
bowlingscorer/cpp/: CMakeLists.txt  main.cpp
bowlingscorer/cpp/bowlingscorer/: CMakeLists.txt  tenpin.cpp  tenpin.hpp  tenpin.tests.cpp
bowlingscorer/python/: main.py
bowlingscorer/python/tenpin/: tenpin.py  tenpin_tests.py
bowlingscorer/rust/tenpin/: Cargo.toml
bowlingscorer/rust/tenpin/src/: main.rs  tenpin.rs
cellular_automata/: README.md
cellular_automata/cpp/: CMakeLists.txt  main.cpp
cellular_automata/cpp/cellular/: CMakeLists.txt  cellular.cpp  cellular.hpp  cellular.tests.cpp
cellular_automata/python/: main.py
cellular_automata/python/cellular/: cellular.py  cellular_tests.py
